fix misaligned album-action button

--- a/src/styles/components/tracks.scss
+++ b/src/styles/components/tracks.scss
@@ -48,6 +48,7 @@
     cursor: pointer;
 
     .album-cover {
+        position: relative;
         width: 100%;
         background: #f5f5f5;
         @include user-select(none);
@@ -122,21 +123,22 @@
 
     .album-action {
         position: absolute;
-        bottom: 60px;
-        right: 15px;
+        bottom: 12px;
+        right: 12px;
         width: 50px;
         height: 50px;
         opacity: 1;
         cursor: pointer;
-        @include flex();
-        align-items: center;
-        justify-content: center;
+        @include flex-center();
         background-color: #fff;
+        border-radius: 100%;
 
         .album-action-button {
+            @include flex-center();
+
             svg {
-                width: 28px;
-                height: 28px;
+                width: 25px;
+                height: 25px;
 
                 path {
                     fill: #333;
